--- a/Vet_Cli_Web/Vet_Cli_Web/App_Themes/Css/Cliente.css
+++ b/Vet_Cli_Web/Vet_Cli_Web/App_Themes/Css/Cliente.css
@@ -1,6 +1,7 @@
 ﻿body {
     margin: 0px;
 }
+
 .container {
     width: 100vw;
     height: 100vh;
@@ -8,18 +9,45 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-} 
+    align-items: center;
+}
 
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align:center;
+    text-align: center;
+}
 
-  }
-
-.tabela {
+.tabela {    
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
 }
-.dados{
-    vertical-align:auto;
+.tabela2 {
+    background-color: lightsteelblue;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+h2 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: left;
+}
+td {
+    padding-left:10px;
+    padding-right:10px;
+    padding-bottom:10px;
+    padding-top:10px;
+    text-align: left;
+    width:auto;
+}
+
+.historico {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-weight: bold;
+    border-top: solid;
+    border-width: 1px;
+    text-align: left;
+    vertical-align: top;
+    height: 130px;
 }
